--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -162,3 +162,67 @@
         }
     }
 }
+@media only screen and (max-width: 425px) {
+    .container {
+        .header {
+            height: 260px;
+        }
+        .content {
+            .address {
+                display: flex;
+                flex-direction: column;
+                padding: 0;
+                padding-top: 30px;
+                padding-bottom: 30px;
+                .detail-address {
+                    max-width: 100%;
+
+                    .name-company {
+                        font-size: 19px;
+                        line-height: 30px;
+                        letter-spacing: 0.3px;
+                        color: #262626;
+                        margin: 0 0 20px 0;
+                    }
+                    .label {
+                    }
+                    .info {
+                        color: #8c8caa;
+                        margin-bottom: 20px;
+                    }
+                }
+                .map {
+                    max-width: 100%;
+                    background: url(./../../assets/img/map1.png);
+                    background-size: auto;
+                    background-position: center;
+                    height: fit-content;
+                    height: 300px;
+                    flex: none;
+                    margin: 0 20px;
+                    .map-link {
+                        width: 100%;
+                        height: 100%;
+                        cursor: pointer;
+                        display: block;
+                    }
+                }
+            }
+            .contact-form {
+                max-width: 425px;
+                .wrap {
+                    max-width: 425px;
+                    margin: 0 20px 30px;
+                    .title-form {
+                        font-size: 32px;
+                        padding-top: 20px;
+                    }
+                    .content-form {
+                        padding: 20px;
+                        width: auto;
+                    }
+                }
+            }
+        }
+    }
+}
